  consistent with "Proof with".
- Program Lemma, Definition now respect automatic introduction.

Module System

- The names of modules (and module types) are now in a fully separated
  namespace from ordinary definitions : "Definition E:=0. Module E. End E."
  is now accepted.

CoqIDE

- Coqide now supports the Restart command, and Undo (with a warning).
  Better support for Abort.


Changes from V8.4beta to V8.4
=============================

Vernacular commands

- New command "Set Parsing Explicit" for deactivating parsing (and printing)
  of implicit arguments (useful for teaching).
- New command "Grab Existential Variables" to transform the unresolved evars at
  the end of a proof into goals.

Tactics

- New command "r string" that interprets "idtac string" as a breakpoint
  and jumps to its next use in Ltac debugger.

Changes from V8.3 to V8.4beta
=============================

Logic

- Standard eta-conversion now supported (dependent product only) (DOC TO DO).
- Guard condition improvement: subterm property is propagated through beta-redex
  blocked by pattern-matching, as in "(match v with C .. => fun x => u end) x";
  this allows for instance to use "rewrite ... in ..." without breaking
  the guard condition.

Specification language and notations

- Maximal implicit arguments can now be set locally by { }. The registration
  traverses fixpoints and lambdas. Because there is conversion in types,
  maximal implicit arguments are not taken into account in partial
  applications (use eta expanded form with explicit { } instead).
- Added support for recursive notations with binders (allows for instance
  to write "exists x y z, P").
- Structure/Record printing can be disable by "Unset Printing Records".
  In addition, it can be controlled on type by type basis using
  "Add Printing Record" or "Add Printing Constructor".
- Pattern-matching compilation algorithm: in "match x, y with ... end",
  possible dependencies of x (or of the indices of its type) in the type